# gemini-mcp-rust

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  todo.md
src/: error.rs  main.rs
src/gemini/: client.rs  mod.rs  models.rs  types.rs
src/mcp/: mod.rs  server.rs
src/tools/: analyze.rs  brainstorm.rs  mod.rs  query.rs  summarize.rs  types.rs
